--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shiranui</title>
     <link rel="stylesheet" href="style.css">
-    <script src="node_modules/tiny-segmenter/dist/tiny-segmenter-0.2.0.js"></script>
+    <script src="tiny-segmenter-0.2.0.js"></script>
     <style>
         /* Additional styles for particle highlighting */
         .particle-word {
