--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Shiranui</title>
     <link rel="stylesheet" href="style.css">
     <!-- Add Kuromoji for morphological analysis -->
-    <script src="kuromoji.js"></script>
+   <script defer src="https://cdn.jsdelivr.net/npm/kuromoji@0.1.2/build/kuromoji.js"></script>
+
     <style>
         /* Additional styles for particle and conjugation highlighting */
         .particle-word {
