--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Shiranui</title>
     <link rel="stylesheet" href="style.css">
     <!-- Add Kuromoji for morphological analysis -->
-   <script defer src="kuromoji.js"></script>
+   <script
+  defer
+  src="https://cdn.jsdelivr.net/npm/kuromoji@0.1.2/dist/kuromoji.js"
+  crossorigin="anonymous">
+</script>
+
 
     <style>
         /* Additional styles for particle and conjugation highlighting */
