--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
     <title>Shiranui</title>
     <link rel="stylesheet" href="style.css">
     <!-- Add Kuromoji for morphological analysis -->
-   <script
-  defer
-  src="https://cdn.jsdelivr.net/npm/kuromoji@0.1.2/dist/kuromoji.js"
-  crossorigin="anonymous">
+  <script defer
+  src="./kuromoji.js">
 </script>
-
 
     <style>
         /* Additional styles for particle and conjugation highlighting */
@@ -226,7 +223,7 @@
             statusEl.style.display = 'block';
             statusEl.textContent = 'Loading Japanese analyzer...';
 
-            kuromoji.builder({ dicPath: "https://cdn.jsdelivr.net/npm/kuromoji@0.1.2/dict/" }).build((err, newTokenizer) => {
+            kuromoji.builder({ dicPath: "./dict/" }).build((err, newTokenizer) => {
                 if (err) {
                     console.error('Failed to load tokenizer:', err);
                     statusEl.textContent = 'Failed to load analyzer. Basic matching will be used.';
